[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
askama_escape = "0.10.3"
cargo-manifest = "0.17.0"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
poem = { version = "3.0.0", features = ["static-files", "multipart"] }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_repr = "0.1.19"
serde_with = "3.11.0"
serde_yml = "0.0.12"
shuttle-poem = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "uuid"] }
tokio = "1.26.0"
toml = "0.8.19"
